--- a/customer_client/package.json
+++ b/customer_client/package.json
@@ -9,6 +9,7 @@
     "@iconify/react": "^3.2.0",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
