--- a/customer_client/package.json
+++ b/customer_client/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.5.1",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@mui/x-date-pickers-pro": "^5.0.0-alpha.2",
+    "@paypal/react-paypal-js": "^7.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
+    "react-lottie-player": "^1.4.3",
     "react-number-format": "^4.9.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
