--- a/admin_client/package.json
+++ b/admin_client/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "notistack": "^2.0.5",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
