--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
+PORT=5000
 ACCESS_TOKEN_SECRET_KEY=TUANVQ
-CONNECTION_URL=mongodb+srv://ducbh62:uC16lAHTEV7QJsdE@cluster0.1v0g1y1.mongodb.net/?retryWrites=true&w=majority
