--- a/admin_client/package.json
+++ b/admin_client/package.json
@@ -25,11 +25,13 @@
     "react-dropzone": "^12.0.5",
     "react-helmet-async": "^1.2.3",
     "react-number-format": "^4.9.1",
+    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
