--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,13 @@
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "qs": "^6.10.3",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "socket.io": "^4.5.1"
   }
 }
