--- a/admin_client/package.json
+++ b/admin_client/package.json
@@ -6,10 +6,15 @@
     "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/list": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
+    "@fullcalendar/timegrid": "^5.11.3",
     "@iconify/react": "^3.2.0",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
-    "@mui/x-date-pickers": "^5.0.0-alpha.1",
+    "@mui/x-date-pickers": "^5.0.6",
     "@mui/x-date-pickers-pro": "^5.0.0-alpha.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
