--- a/admin_client/package.json
+++ b/admin_client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.13.1",
+    "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fullcalendar/daygrid": "^5.11.3",
@@ -23,6 +24,9 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "image-extensions": "^1.1.0",
+    "is-hotkey": "^0.2.0",
+    "is-url": "^1.2.4",
     "notistack": "^2.0.5",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
@@ -30,12 +34,14 @@
     "react-dropzone": "^12.0.5",
     "react-helmet-async": "^1.2.3",
     "react-number-format": "^4.9.1",
-    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
+    "slate-react": "^0.94.0",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
